--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#FF386641</color>
+    <color name="light_green">#FF6A994E</color>
+    <color name="beige">#FFF2E8CF</color>
+    <color name="splash_background">#F2E8CF</color> <!-- Our Beige color -->
 </resources>
